buildscript {
    repositories {
        google()
        mavenCentral()
    }
    dependencies {
        classpath "com.android.tools.build:gradle:7.1.2"
    }
}

repositories {
    google()
    mavenLocal()
    mavenCentral()
}

apply plugin: 'com.android.application'

android {
    compileSdkVersion 30
    buildToolsVersion "30.0.3"

    defaultConfig {
        applicationId "software.amazon.awssdk.iotsamples"
        minSdkVersion 26
        targetSdkVersion 30
        versionCode 1
        versionName "1.0"
        ndkVersion "23.1.7779620"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    sourceSets {
        main {
            java.srcDir '../../Utils/CommandLineUtils'
            java.srcDir '../../Mqtt5/PubSub/src/main/java'
            java.srcDir '../../BasicPubSub/src/main/java'
            java.srcDir '../../Jobs/src/main/java'
            java.srcDir '../../Shadow/src/main/java'
            java.srcDir '../../CognitoConnect/src/main/java'
            java.srcDir '../AndroidKeyChainPubSub/src/main/java'
            java.srcDir 'src/main/java'
        }
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility = 1.8
        targetCompatibility = 1.8
    }
    ndkVersion '23.1.7779620'
}

dependencies {
    implementation fileTree(dir: 'libs', include: ['*.jar'])
    api 'software.amazon.awssdk.iotdevicesdk:aws-iot-device-sdk-android:1.20.0'
    implementation 'androidx.appcompat:appcompat:1.1.0'
    implementation 'androidx.core:core:1.2.0'
    implementation 'androidx.core:core-ktx:1.2.0'
    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
    testImplementation 'junit:junit:4.13'
    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
}
